fixed todo spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 h1 {
   font-weight: 100;
   margin-bottom: 20px;
+  font-size: 3rem;
 }
 
 .button {
@@ -29,10 +30,6 @@ ul {
   margin-top: 8px;
 }
 
-#todo-list {
-  /*padding: 0px 40px;*/
-}
-
 #todo-list input {
   border: none;
   box-shadow: none;
@@ -40,9 +37,6 @@ ul {
 
 #todo-list input:focus{
   box-shadow: inset 0 1px 2px hsla(0,0%,4%,.1)
-}
-
-#todo-list .row {
 }
 
 .remove {
@@ -55,5 +49,5 @@ ul {
 
 .todo {
   border-top: 1px solid lightgray;
-  padding-top: 10px;
+  padding-top: 16px;
 }
